--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,34 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
-
+.container1 {
+  max-width: 1355px;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 576px) {
+  .container1 {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container1 {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container1 {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container1 {
+    max-width: 1300px;
+  }
+}
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11438,7 +11465,7 @@ h5,
 }
 
 .ftco-about .img-about {
-  width: 320px;
+  width: 520px;
   z-index: 0;
   position: relative;
 }
